--- a/HedgeModManager/UI/MainWindow.xaml
+++ b/HedgeModManager/UI/MainWindow.xaml
@@ -9,11 +9,6 @@
         Loaded="Window_Loaded"
         MinHeight="600" MinWidth="560" Height="600" Width="560" WindowStartupLocation="CenterScreen" Style="{StaticResource HedgeWindow}">
     <Window.Resources>
-        <Style TargetType="ListViewItem" BasedOn="{StaticResource {x:Type ListViewItem}}">
-            <EventSetter Event="MouseDoubleClick" Handler="UI_MouseDoubleClick"/>
-            <Setter Property="ContextMenu" Value="{DynamicResource ModContextMenu}"/>
-        </Style>
-        
         <ContextMenu x:Key="ModContextMenu">
             <MenuItem Header="Description" Click="UI_Description_Click"/>
             <MenuItem Header="Open containing folder" Click="UI_Open_Folder"/>
@@ -32,6 +27,12 @@
                         <Grid>
                             <ListView x:Name="ModsList" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Foreground="White" 
                                       Margin="0,0,32,0" AllowDrop="True" Drop="UI_ModsList_Drop">
+                                <ListView.ItemContainerStyle>
+                                    <Style TargetType="ListViewItem" BasedOn="{StaticResource {x:Type ListViewItem}}">
+                                        <EventSetter Event="MouseDoubleClick" Handler="UI_MouseDoubleClick"/>
+                                        <Setter Property="ContextMenu" Value="{DynamicResource ModContextMenu}"/>
+                                    </Style>
+                                </ListView.ItemContainerStyle>
                                 <ListView.View>
                                     <GridView AllowsColumnReorder="True">
                                         <GridViewColumn Header="Name" Width="200">
