Finish GB support(finally)

--- a/HedgeModManager/Resources/GBStyleSheet.css
+++ b/HedgeModManager/Resources/GBStyleSheet.css
@@ -1,33 +1,26 @@
 body {
-    background-color: #2D2D30;
+    background-color: transparent;
     color: #e2e2e2;
     font-family: 'Open Sans', sans-serif;
-    scrollbar-base-color: #2D2D30;
-    scrollbar-face-color: #CDCDCD;
-    scrollbar-3dlight-color: #000;
-    scrollbar-highlight-color: gray;
-    scrollbar-track-color: #2D2D30;
-    scrollbar-arrow-color: white;
-    scrollbar-shadow-color: gray;
 }
 
 a
 {
     color: #FFE033;
-    text-decoration: none;
-    vertical-align: baseline;
+    /*text-decoration: none;
+    vertical-align: baseline;*/
 }
 
 h1
 {
     font-size: 18px;
-    margin: 0 0 0.75em;
-    padding: 0 0 0.25em 0;
+    /*margin: 0 0 0.75em;
+    padding: 0 0 0.25em 0;*/
 }
 
 li
 {
-    list-style-type: square;
+    list-style-type: disc;
 }
 
 span.RedColor
