--- a/HedgeModManager/UI/OptionsWindow.xaml
+++ b/HedgeModManager/UI/OptionsWindow.xaml
@@ -10,14 +10,14 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
-            <RowDefinition Height="1*"/>
+            <RowDefinition Height="*"/>
             <RowDefinition Height="40"/>
         </Grid.RowDefinitions>
         <TextBlock x:Name="Header" Text="HEADER" FontSize="30" Foreground="#0066CC" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <StackPanel x:Name="CheckStack" Grid.Row="1" VerticalAlignment="Center" Margin="5,0,5,0" Width="Auto" Height="Auto"/>
         <StackPanel x:Name="Stack" Orientation="Horizontal" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Stretch">
-        <Button Width="Auto" Height="23" Margin="5" Content="    OK    " Click="Ok_Click"/>
-        <Button Width="Auto" Height="23" Margin="5" Content="    Cancel   " IsCancel="True"/>
+        <Button Width="60" Height="23" Margin="5" Content="OK" Click="Ok_Click"/>
+        <Button Width="60" Height="23" Margin="5" Content="Cancel" IsCancel="True"/>
         </StackPanel>
     </Grid>
 </Window>
